@@ -1,3 +1,10 @@
+openmolar (0.4.03+bzr0830-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream changes
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 07 Jun 2013 12:45:39 +0100
+
+
 openmolar (0.4.02+bzr0829-0~__DIST__0) __DIST__; urgency=low
 
   * upstream changes
